tests/baselines/reference/objectLiteralMemberWithQuestionMark1.errors.txt
tests/cases/compiler/objectLiteralMemberWithQuestionMark1.ts(1,14): error TS1162: An object member cannot be declared optional.


==== tests/cases/compiler/objectLiteralMemberWithQuestionMark1.ts (1 errors) ====
    var v = { foo?() { } }
                 ~
!!! error TS1162: An object member cannot be declared optional.